Grease Pencil Weight Painting breaks when joining strokes #76417

Closed
opened 2020-05-04 20:10:58 +02:00 by Weasel On a Stick · 9 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca
Worked: (optional)

Short description of error
When joining separate pre-painted GP strokes the weight of second stroke gets totally replaced by first one.

Exact steps for others to reproduce the error
Create a blank file
Create GP object, draw 2 squiggles and assign each to a separate vertex group image.png
(for the sake of experiment I duplicated that entire GP object)
now join those 2 strokes with Ctrl+J
all vertex painting is now ruined
image.png

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: `375c7dc4ca` Worked: (optional) **Short description of error** When joining separate pre-painted GP strokes the weight of second stroke gets totally replaced by first one. **Exact steps for others to reproduce the error** Create a blank file Create GP object, draw 2 squiggles and assign each to a separate vertex group ![image.png](https://archive.blender.org/developer/F8512508/image.png) (for the sake of experiment I duplicated that entire GP object) now join those 2 strokes with Ctrl+J all vertex painting is now ruined ![image.png](https://archive.blender.org/developer/F8512511/image.png)

Added subscriber: @WOAS

Added subscriber: @WOAS

Added subscriber: @antoniov

Added subscriber: @antoniov

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This a know limitation actually.

This a know limitation actually.

But I will try to add this feature.

But I will try to add this feature.

This issue was referenced by be498a21ed

This issue was referenced by be498a21edd8a6320fb25710b94e1229b0984d07

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Antonio Vazquez self-assigned this 2020-05-05 12:52:08 +02:00

Pardon my complete lack of git knowledge but how would I get a version of Blender with this fix applied?

Pardon my complete lack of git knowledge but how would I get a version of Blender with this fix applied?

@WOAS You don't need git, just download tomorrow the 2.90 daily build from here: https://builder.blender.org/download/

EDIT: The fix will be in the build of tomorrow or any date after the fix I did.

@WOAS You don't need git, just download tomorrow the 2.90 daily build from here: https://builder.blender.org/download/ EDIT: The fix will be in the build of tomorrow or any date after the fix I did.
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#76417
No description provided.