Fix T76417: Gpencil Join did not supported weight join

Now the operator keep the weights of all strokes when joining.